fix: horizontal scroll on mobile prevention

--- a/index.css
+++ b/index.css
@@ -76,6 +76,7 @@ body {
     line-height: 1.5;
     font-family: var(--ff-bellefair);
     font-weight: 400;
+    position: relative;
     overflow-x: hidden;
 }
 
